[gd_scene load_steps=3 format=3 uid="uid://cei0rphcbwd5e"]

[ext_resource type="Script" uid="uid://b8ma8y70gcupo" path="res://ui/overlays/game_over.gd" id="1_40baj"]
[ext_resource type="AudioStream" uid="uid://bu3ph7d018ni2" path="res://assets/sad_game_over.wav" id="2_a1htc"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_40baj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1155.0
offset_bottom = 649.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 279.0
offset_top = 114.0
offset_right = 853.0
offset_bottom = 251.0
theme_override_font_sizes/font_size = 100
text = "GAME OVER"

[node name="FinalScore" type="Label" parent="."]
layout_mode = 0
offset_left = 506.0
offset_top = 295.0
offset_right = 643.0
offset_bottom = 330.0
theme_override_font_sizes/font_size = 25

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 357.0
offset_top = 384.0
offset_right = 790.0
offset_bottom = 525.0
theme_override_constants/separation = 25

[node name="ReintentarButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "REINTENTAR"

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SALIR AL MENU"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_a1htc")
volume_db = -15.0

[connection signal="pressed" from="VBoxContainer/ReintentarButton" to="." method="_on_reintentar_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
